test/files/neg/t0204.check
t0204.scala:4: error: class type required but Program.A{type T = String} found
 trait C extends B
                 ^
1 error
